Fix deduplication of resources on import

On importing resource we shouldn't just disable the copies. All the
copies should be available in the database as active, until the user
explicitly disables them. Though we should de-duplicate them
based on their name-filename-md5 signature when listing them in the
model. That can be easily done by simple adding "group by" to the
query.

Such solution both fixes legacy presets (bug 446009), and makes
importing resources less embarrassing (bug 445367).

BUG:445367
CCBUG:446009
(cherry picked from commit aeed954b09cbdb68a6844d2d7b47626f8009c9e4)