libs/resources/KisResourceCacheDb.cpp
@@ -780,33 +780,6 @@ bool KisResourceCacheDb::addResource(KisResourceStorageSP storage, QDateTime tim
         return true;
     }
 
-    // Check whether another resource with this MD5 already exists: then we set the resource status to hidden
-    int active = resource->active();
-    {
-        QSqlQuery q;
-        if (!q.prepare("SELECT count(*)\n"
-                       "FROM   versioned_resources\n"
-                       ",      resources\n"
-                       "WHERE  versioned_resources.md5sum = :md5sum\n"
-                       "AND    resources.id = versioned_resources.resource_id\n"
-                       "AND    resources.status = 1")) {
-            qWarning() << "Could not prepare select count from versioned_resources query" << q.lastError();
-            return false;
-        }
-        q.bindValue(":md5sum", resource->md5Sum());
-        if (!q.exec()) {
-            qWarning() << "Could not execute select from resource_types query" << q.lastError();
-            return false;
-        }
-        q.first();
-        int rowCount = q.value(0).toInt();
-
-        if (rowCount > 0) {
-            active = 0;
-        }
-
-    }
-
     QSqlQuery q;
     r = q.prepare("INSERT INTO resources \n"
                   "(storage_id, resource_type_id, name, filename, tooltip, thumbnail, status, temporary, md5sum) \n"
@@ -868,7 +841,7 @@ bool KisResourceCacheDb::addResource(KisResourceStorageSP storage, QDateTime tim
     buf.close();
     q.bindValue(":thumbnail", buf.data());
 
-    q.bindValue(":status", active);
+    q.bindValue(":status", resource->active());
     q.bindValue(":temporary", (temporary ? 1 : 0));
     q.bindValue(":md5sum", resource->md5Sum());
 
